--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -47,7 +47,7 @@ tests:
       python_version: ${{ python_min }}.*
   - files:
       source:
-        - test
+        - test/
     requirements:
       run:
         - pip
